Additional debugging tools.  Fix to get the beamspot with the raster.  Clone of cross.